--- a/app/src/main/res/layout/activity_full_screen.xml
+++ b/app/src/main/res/layout/activity_full_screen.xml
@@ -8,40 +8,40 @@
     tools:context=".FullScreenActivity">
 
     <ImageView
-        android:id="@+id/img_splash"
+        android:id="@+id/img_logo"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="100dp"
-        android:contentDescription="@string/img_splash"
+        android:contentDescription="@string/img_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img_splash" />
+        app:srcCompat="@drawable/img_logo" />
 
     <TextView
-        android:id="@+id/txt_splash"
+        android:id="@+id/txt_startup_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="@string/gold_price"
+        android:text="@string/txt_startup_title"
         android:textColor="@color/splash_gold"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/img_splash"
+        app:layout_constraintEnd_toEndOf="@+id/img_logo"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="@+id/img_splash"
-        app:layout_constraintTop_toBottomOf="@+id/img_splash" />
+        app:layout_constraintStart_toStartOf="@+id/img_logo"
+        app:layout_constraintTop_toBottomOf="@+id/img_logo" />
 
     <TextView
-        android:id="@+id/txt_splash_subtitle"
+        android:id="@+id/txt_startup_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:text="@string/gold_price_global"
+        android:text="@string/txt_startup_subtitle"
         android:textColor="@color/white"
         android:textSize="26sp"
-        app:layout_constraintEnd_toEndOf="@+id/img_splash"
+        app:layout_constraintEnd_toEndOf="@+id/img_logo"
         app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="@+id/img_splash"
-        app:layout_constraintTop_toBottomOf="@+id/txt_splash" />
+        app:layout_constraintStart_toStartOf="@+id/img_logo"
+        app:layout_constraintTop_toBottomOf="@+id/txt_startup_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
