--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-     android:background="@color/black"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"/>
+    android:background="@color/black"
+    tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/img_back_top_main"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_top_main" />
+
+    <TextView
+        android:id="@+id/txt_date_jalali"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="@string/txt_date_jalali"
+        android:textColor="@color/black"
+        android:textSize="28sp"
+        app:layout_constraintBottom_toTopOf="@+id/txt_date_gregorian"
+        app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
+        app:layout_constraintTop_toTopOf="@+id/img_back_top_main" />
+
+    <TextView
+        android:id="@+id/txt_date_gregorian"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="@string/txt_date_gregorian"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_back_top_main"
+        app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
+        app:layout_constraintTop_toBottomOf="@+id/txt_date_jalali" />
+
+    <View
+        android:id="@+id/vw_prices"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:background="@drawable/back_gray_view"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
+        app:layout_constraintTop_toBottomOf="@+id/img_back_top_main"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <View
+        android:id="@+id/vw_prices_midline"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:background="@color/back_line"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices"
+        app:layout_constraintEnd_toEndOf="@+id/vw_prices"
+        app:layout_constraintStart_toStartOf="@+id/vw_prices"
+        app:layout_constraintTop_toTopOf="@+id/vw_prices" />
+
+    <TextView
+        android:id="@+id/txt_gold_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/gold_price"
+        android:textColor="@color/gold_text"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices_midline"
+        app:layout_constraintEnd_toEndOf="@+id/vw_prices"
+        app:layout_constraintStart_toEndOf="@+id/vw_prices_midline"
+        app:layout_constraintTop_toTopOf="@+id/vw_prices_midline" />
+
+    <TextView
+        android:id="@+id/txt_currency_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/currency_price"
+        android:textColor="@color/gray_text"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices_midline"
+        app:layout_constraintEnd_toStartOf="@+id/vw_prices_midline"
+        app:layout_constraintStart_toStartOf="@+id/vw_prices"
+        app:layout_constraintTop_toTopOf="@+id/vw_prices_midline" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/vw_prices"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/vw_prices"
+        app:layout_constraintTop_toBottomOf="@+id/vw_prices"
+        app:layout_constraintVertical_bias="1.0" />
+</androidx.constraintlayout.widget.ConstraintLayout>
