--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="splash_gold">#D5A06D</color>
-    <color name="white_text">#787879</color>
+    <color name="gray_text">#787879</color>
     <color name="back_view_black">#141414</color>
     <color name="gold_text">#E7C376</color>
     <color name="back_line">#D9D9D9</color>
