--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,10 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.GoldProject" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+        <!-- Font Family -->
+        <item name="fontFamily">@font/sans_fa_name_regular</item>
+        <item name="font">@font/sans_fa_name_bold</item>
     </style>
 
     <style name="Theme.GoldProject" parent="Base.Theme.GoldProject" />
