add recycler layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:layoutDirection="ltr"
     tools:context=".MainActivity">
 
     <ImageView
@@ -14,7 +16,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="@string/img_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,27 +27,29 @@
         android:id="@+id/txt_date_jalali"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/txt_date_jalali"
         android:textColor="@color/black"
-        android:textSize="28sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txt_date_gregorian"
         app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
-        app:layout_constraintTop_toTopOf="@+id/img_back_top_main" />
+        app:layout_constraintTop_toTopOf="@+id/img_back_top_main"
+        tools:text="@string/txt_date_jalali" />
 
     <TextView
         android:id="@+id/txt_date_gregorian"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="@string/txt_date_gregorian"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/img_back_top_main"
         app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
-        app:layout_constraintTop_toBottomOf="@+id/txt_date_jalali" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_date_jalali"
+        tools:text="@string/txt_date_gregorian" />
 
     <View
         android:id="@+id/vw_prices"
