--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -24,32 +23,17 @@
         app:srcCompat="@drawable/back_top_main" />
 
     <TextView
-        android:id="@+id/txt_date_jalali"
+        android:id="@+id/txt_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/txt_date_gregorian"
         app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
         app:layout_constraintTop_toTopOf="@+id/img_back_top_main"
-        tools:text="@string/txt_date_jalali" />
-
-    <TextView
-        android:id="@+id/txt_date_gregorian"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/img_back_top_main"
-        app:layout_constraintEnd_toEndOf="@+id/img_back_top_main"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
-        app:layout_constraintTop_toBottomOf="@+id/txt_date_jalali"
-        tools:text="@string/txt_date_gregorian" />
+        tools:text="@string/txt_time" />
 
     <View
         android:id="@+id/vw_prices"
@@ -61,47 +45,75 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/img_back_top_main"
         app:layout_constraintTop_toBottomOf="@+id/img_back_top_main"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.049" />
 
     <View
-        android:id="@+id/vw_prices_midline"
+        android:id="@+id/vw_gold_currency_midline"
         android:layout_width="1dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
+        android:layout_height="46dp"
         android:background="@color/back_line"
         app:layout_constraintBottom_toBottomOf="@+id/vw_prices"
-        app:layout_constraintEnd_toEndOf="@+id/vw_prices"
-        app:layout_constraintStart_toStartOf="@+id/vw_prices"
+        app:layout_constraintEnd_toStartOf="@+id/txt_gold"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/txt_crypto"
+        app:layout_constraintTop_toTopOf="@+id/vw_prices" />
+
+    <View
+        android:id="@+id/vw_currency_crypto_midline"
+        android:layout_width="1dp"
+        android:layout_height="46dp"
+        android:background="@color/back_line"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices"
+        app:layout_constraintEnd_toStartOf="@+id/txt_crypto"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/txt_currency"
         app:layout_constraintTop_toTopOf="@+id/vw_prices" />
 
     <TextView
-        android:id="@+id/txt_gold_price"
+        android:id="@+id/txt_gold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/gold_price"
+        android:text="@string/gold"
         android:textColor="@color/gold_text"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/vw_prices_midline"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices"
         app:layout_constraintEnd_toEndOf="@+id/vw_prices"
-        app:layout_constraintStart_toEndOf="@+id/vw_prices_midline"
-        app:layout_constraintTop_toTopOf="@+id/vw_prices_midline" />
+        app:layout_constraintStart_toEndOf="@+id/vw_gold_currency_midline"
+        app:layout_constraintTop_toTopOf="@+id/vw_prices" />
 
     <TextView
-        android:id="@+id/txt_currency_price"
+        android:id="@+id/txt_crypto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/currency_price"
+        android:text="@string/crypto"
         android:textColor="@color/gray_text"
         android:textSize="22sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/vw_prices_midline"
-        app:layout_constraintEnd_toStartOf="@+id/vw_prices_midline"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices"
+        app:layout_constraintEnd_toStartOf="@+id/vw_gold_currency_midline"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/vw_currency_crypto_midline"
+        app:layout_constraintTop_toTopOf="@+id/vw_prices" />
+
+    <TextView
+        android:id="@+id/txt_currency"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="@string/currency"
+        android:textColor="@color/gray_text"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/vw_prices"
+        app:layout_constraintEnd_toStartOf="@+id/vw_currency_crypto_midline"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/vw_prices"
         app:layout_constraintStart_toStartOf="@+id/vw_prices"
-        app:layout_constraintTop_toTopOf="@+id/vw_prices_midline" />
+        app:layout_constraintTop_toTopOf="@+id/vw_prices" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcy_price_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
